# acl-logos-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  manage.sh
.kreya/ACL/: Logos.krproj  dev.krenv  directory.krpref  readme.md
.kreya/ACL/acl/: directory.krpref
.kreya/ACL/acl/rpc/Identity/: Issue-request.json  Issue.krop  Revoke-request.json  Revoke.krop
.kreya/ACL/acl/rpc/Status/: Up.krop
code/python/: status_check.py
code/service/: CMakeLists.txt
code/service/include/core/: constants.h.in  node.h
code/service/include/core/config/: cmd_arg_options.h  cmd_arg_parser.h  cmd_arg_serializer.h  cmd_arg_validator.h
code/service/include/core/db/: database.h  idatabase.h
code/service/include/core/db/models/: block.h  consensus_state.h  identity.h  networks.h  peers.h  state_data.h  transaction.h
code/service/include/core/interfaces/: blockchain_node.h  object_serializer.h  object_validator.h
code/service/include/core/rpc/services/: identity_service.h  status_service.h
code/service/src/: main.cpp
code/service/src/core/: node.cpp
code/service/src/core/config/: cmd_arg_serializer.cpp  cmd_arg_validator.cpp
code/service/src/core/db/: database.cpp
code/service/src/core/rpc/services/: identity_service.cpp  status_service.cpp
code/unittests/: CMakeLists.txt
code/unittests/src/: main.cpp
etc/: dev.settings.json
